# streamlit-demo

./: Hello.py  README.md  pyproject.toml  streamlit-demo.code-workspace
data/: manhour.pkl  projects.pkl  users.pkl
demoes/: README.md
pages/: 0_用户管理.py  1_项目管理.py  2_工时管理.py
pages/tmp/: 0_Animation_Demo.py  0_form_demo.py  _DataFrame_Demo.py  _Plotting_Demo.py
