[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "cube-engine"
description = ""
license = ""
requires-python = ">=3.7"
authors = [
    { name = "BEE", email = "" },
]

dynamic = ["readme", "version"]

# https://beta.ruff.rs/docs/configuration/#using-rufftoml
[tool.ruff]
select = ["E", "F", "I", "B", "PIE"]
ignore = ["B904", "B028", "F541"]
line-length = 120

[tool.ruff.isort]
combine-as-imports = true
